--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
-# Created by venv; see https://docs.python.org/3/library/venv.html
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+env/
+ENV/
+.venv
+.env.local
 .env
+.env.local
+.env.*.local
+.fly/
+
+
+
+
 
